# faultline

./: CLAUDE.md  Cargo.toml  README.md
crates/faultline/: Cargo.toml
crates/faultline/src/: errorkind.rs  lib.rs  result_ext.rs  serde.rs
