[package]
name = "faultline"
description = "A typed error library for services and control planes that separates domain failures, transient faults, and invariant violations."
version = "0.1.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = true

[dependencies]
serde = { version = "1.0.216", default-features = false, features = [
  "std",
  "derive",
] }
serde_json = { version = "1.0.134", default-features = false, features = [
  "std",
] }
thiserror = { version = "2.0.11", default-features = false, features = ["std"] }
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
either = { version = "1.13", default-features = false, features = [
  "std",
  "serde",
] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
schemars = { version = "1.2.1", default-features = false, features = [
  "derive",
] }

[lints]
workspace = true
